# Helix

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI_HELIX_PROMPT.md  GEMINI_WAF_FIX.md  HELIX_V1_1_UPGRADE.md  HELIX_V1_2_UPGRADE.md  HELIX_V1_3_UPGRADE.md  HELIX_V1_4_FINAL.md  HELIX_V1_UPGRADE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
spaces/: README.md  app.py  requirements.txt
src/helix/: api.py  cache.py  config.py  logger.py  models.py  server.py
src/helix/clients/: fdaClient.py  pubmedClient.py  trialsClient.py
src/helix/config/: __init__.py  fda.py  pubmed.py  trials.py  weights.py
src/helix/tools/: eligibility.py  fda.py  health.py  pubmed.py  synthesis.py  trials.py
src/helix/utils/: formatter.py  mesh.py  synonyms.py
tests/: conftest.py
tests/tools/: testEligibility.py  testFda.py  testHealth.py  testPubmed.py  testSynthesis.py  testTrials.py
tests/unit/: test_cache.py  test_formatter.py  test_scoring.py  test_synonyms.py
