[project]
name = "helix-mcp"
version = "1.5.0"
description = "Clinical evidence synthesis MCP server — ClinicalTrials.gov, PubMed, and openFDA in one call"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp", "clinical-trials", "pubmed", "fda", "healthcare",
    "evidence-synthesis", "medical-research", "ai", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "curl_cffi>=0.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/Al1Abdullah/Helix"
Documentation = "https://github.com/Al1Abdullah/Helix#readme"
Issues = "https://github.com/Al1Abdullah/Helix/issues"
Changelog = "https://github.com/Al1Abdullah/Helix/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
helix     = "helix.server:run"
helix-api = "helix.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
